--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <h1 class="font-h1">
     2023,<br />
-    Happy 'Black Bunny' Year!
+    Happy
+    <strong>Black Bunny</strong> Year!<br />
   </h1>
   <h3 class="font-h3">
-    소중한 사람을 위해 신년카드를 만들어 보세요. <br />새해를 여는 음악도 함께
-    보낼 수 있어요.
+    소중한 사람을 위해 신년카드를 만들어 보세요.<br />DJ 블랙버니가 추천하는
+    음악도 함께 보낼 수 있어요.
   </h3>
   <a [routerLink]="['/editor']">
     <div class="button-default button-editor">신년 카드 만들기</div></a
